--- a/img/index.html
+++ b/img/index.html
@@ -20,6 +20,32 @@
                     vero fugit aspernatur sapiente temporibus?</p>
             </div>
         </div>
+
+        <div class="card">
+            <div id="card-header">
+                <img src="" alt="">
+            </div>
+            <div class="card-text">
+                <h1>Article 1</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Similique praesentium quod illum ipsum, tempore alias eveniet aut 
+                    dolores culpa architecto delectus dolore rem error expedita
+                    vero fugit aspernatur sapiente temporibus?</p>
+            </div>
+        </div>
+        
+        <div class="card">
+            <div id="card-header">
+                <img src="" alt="">
+            </div>
+            <div class="card-text">
+                <h1>Article 1</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Similique praesentium quod illum ipsum, tempore alias eveniet aut 
+                    dolores culpa architecto delectus dolore rem error expedita
+                    vero fugit aspernatur sapiente temporibus?</p>
+            </div>
+        </div>
     </div>
     
 </body>
