--- a/img/index.html
+++ b/img/index.html
@@ -10,7 +10,7 @@
     <div id="container">
         <div class="card">
             <div id="card-header">
-                <img src="" alt="">
+                <img src="img/image1.png" alt="">
             </div>
             <div class="card-text">
                 <h1>Article 1</h1>
@@ -23,7 +23,7 @@
 
         <div class="card">
             <div id="card-header">
-                <img src="" alt="">
+                <img src="img/image2.png" alt="">
             </div>
             <div class="card-text">
                 <h1>Article 1</h1>
@@ -33,10 +33,10 @@
                     vero fugit aspernatur sapiente temporibus?</p>
             </div>
         </div>
-        
+
         <div class="card">
             <div id="card-header">
-                <img src="" alt="">
+                <img src="img/image3.png" alt="">
             </div>
             <div class="card-text">
                 <h1>Article 1</h1>
