modif id by class

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="container">
         <div class="card">
-            <div id="card-header">
+            <div class="card-header">
                 <img src="img/image1.png" alt="">
             </div>
             <div class="card-text">
@@ -22,7 +22,7 @@
         </div>
 
         <div class="card">
-            <div id="card-header">
+            <div class="card-header">
                 <img src="img/image2.png" alt="">
             </div>
             <div class="card-text">
@@ -35,7 +35,7 @@
         </div>
 
         <div class="card">
-            <div id="card-header">
+            <div class="card-header">
                 <img src="img/image3.png" alt="">
             </div>
             <div class="card-text">
