--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="container">
-        <div class="card">
+        <div class="card">                          <!--card 1-->
             <div class="card-header">
                 <img src="img/image1.png" alt="">
             </div>
@@ -18,10 +18,10 @@
                     Similique praesentium quod illum ipsum, tempore alias eveniet aut 
                     dolores culpa architecto delectus dolore rem error expedita
                     vero fugit aspernatur sapiente temporibus?</p>
-            </div>
+            </div>                                  <!--end of card 1-->
         </div>
 
-        <div class="card">
+    <div class="card">                              <!--card 2-->
             <div class="card-header">
                 <img src="img/image2.png" alt="">
             </div>
@@ -31,10 +31,10 @@
                     Similique praesentium quod illum ipsum, tempore alias eveniet aut 
                     dolores culpa architecto delectus dolore rem error expedita
                     vero fugit aspernatur sapiente temporibus?</p>
-            </div>
+            </div>                                  <!--end of card 2-->
         </div>
 
-        <div class="card">
+        <div class="card">                          <!--card 3-->
             <div class="card-header">
                 <img src="img/image3.png" alt="">
             </div>
@@ -44,7 +44,7 @@
                     Similique praesentium quod illum ipsum, tempore alias eveniet aut 
                     dolores culpa architecto delectus dolore rem error expedita
                     vero fugit aspernatur sapiente temporibus?</p>
-            </div>
+            </div>                                  <!--end of card 3-->
         </div>
     </div>
     
