add class coeur

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <div class="card">                          <!--card 1-->
             <div class="card-header">
                 <img src="img/image1.png" alt="">
+                <div class="coeur"></div>
             </div>
             <div class="card-text">
                 <h1>Article 1</h1>
@@ -24,6 +25,7 @@
     <div class="card">                              <!--card 2-->
             <div class="card-header">
                 <img src="img/image2.png" alt="">
+                <div class="coeur"></div>
             </div>
             <div class="card-text">
                 <h1>Article 2</h1>
@@ -37,6 +39,7 @@
         <div class="card">                          <!--card 3-->
             <div class="card-header">
                 <img src="img/image3.png" alt="">
+                <div class="coeur"></div> 
             </div>
             <div class="card-text">
                 <h1>Article 3</h1>
