--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
     <title>Flex</title>
 </head>
@@ -11,7 +12,7 @@
         <div class="card">                          <!--card 1-->
             <div class="card-header">
                 <img src="img/image1.png" alt="">
-                <div class="coeur"></div>
+                <div class="coeur"><i class="fa-regular fa-heart"></i></div>
             </div>
             <div class="card-text">
                 <h1>Article 1</h1>
@@ -22,10 +23,10 @@
             </div>                                  <!--end of card 1-->
         </div>
 
-    <div class="card">                              <!--card 2-->
+    <div class="card">                              <!--card 2--> 
             <div class="card-header">
                 <img src="img/image2.png" alt="">
-                <div class="coeur"></div>
+                <div class="coeur"><i class="fa-regular fa-heart"></i></div>
             </div>
             <div class="card-text">
                 <h1>Article 2</h1>
@@ -39,7 +40,7 @@
         <div class="card">                          <!--card 3-->
             <div class="card-header">
                 <img src="img/image3.png" alt="">
-                <div class="coeur"></div> 
+                <div class="coeur"><i class="fa-regular fa-heart"></i></div> 
             </div>
             <div class="card-text">
                 <h1>Article 3</h1>
